Fixed flicker

--- a/src/views/styles/app.scss
+++ b/src/views/styles/app.scss
@@ -18,6 +18,10 @@ body {
   font-size: $font-base-size;
   font-weight: map-get($map: $font-weights, $key: regular);
 
+  // Antiflicker
+  perspective: 1000;
+  backface-visibility: hidden;
+
   &.no-scroll {
     overflow: hidden;
   }
